MET-1420 cleanup, added run prod task